--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,13 @@
   
 }
 
+#banner {
+  background-color: #004D98;
+  float: top;
+  text-align: center;
+}
+
 .body {
-  background-color: #ff0000;
   background-image: url('https://assets.goal.com/images/v3/blt750bbc2212942232/GettyImages-1967999408.jpg?auto=webp&format=pjpg&width=2048&quality=60');
 }
 
