--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,7 @@
 #banner {
   background-color: #004D98;
   float: top;
-  text-align: center;
-  padding: 20px;
-  font-size: 30px;
-  font-family: monospace;
-  color: white;
-  border-radius: 10px;
-  margin: 20px;
-  border: 5px solid #004D98;
+  text-align: center
 }
 
 .body {
